--- a/Firmware/.vscode/launch.json
+++ b/Firmware/.vscode/launch.json
@@ -14,7 +14,7 @@
             "name": "PIO Debug",
             "executable": "/Users/andrei/Documents/ICLR/Ricardo-FlintandSteel/Firmware/.pio/build/esp32s3/firmware.elf",
             "projectEnvName": "esp32s3",
-            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -27,7 +27,7 @@
             "name": "PIO Debug (skip Pre-Debug)",
             "executable": "/Users/andrei/Documents/ICLR/Ricardo-FlintandSteel/Firmware/.pio/build/esp32s3/firmware.elf",
             "projectEnvName": "esp32s3",
-            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -36,7 +36,7 @@
             "name": "PIO Debug (without uploading)",
             "executable": "/Users/andrei/Documents/ICLR/Ricardo-FlintandSteel/Firmware/.pio/build/esp32s3/firmware.elf",
             "projectEnvName": "esp32s3",
-            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/Users/andrei/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
