--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -9,33 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 ; https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
-
-
-[env:esp32dev]
-platform = espressif32@5.4.0
-board = esp32dev
-board_build.ram = 520
-board_build.partitions = ricpart.csv
-framework = espidf
-monitor_speed = 115200
-extra_scripts=extra_script.py
-build_flags = 
-	-std=gnu++17
-	-D ARDUINO=100
-	-DESP32=1
-    -DARDUINO_ARCH_ESP32=1
-	-fexceptions
-	; -frtti
-	; -D DEBUG_ENABLED=1
-	-Wno-missing-field-initializers
-
-build_unflags = 
-	-std=gnu++11
-	-fno-exceptions
-	-fno-rtti
+[env]
+board_build.embed_txtfiles =
+    managed_components/espressif__esp_insights/server_certs/https_server.crt
+    managed_components/espressif__esp_rainmaker/server_certs/rmaker_mqtt_server.crt
+    managed_components/espressif__esp_rainmaker/server_certs/rmaker_claim_service_server.crt
+    managed_components/espressif__esp_rainmaker/server_certs/rmaker_ota_server.crt
 
 [env:esp32s3]
-platform = espressif32@5.4.0
+platform = espressif32@6.9.0
 board = esp32-s3-devkitc-1
 board_build.ram = 520
 board_build.flash_mode = dio
